Add saving response body to S3

--- a/service/serverless.yml
+++ b/service/serverless.yml
@@ -57,7 +57,8 @@ provider:
 functions:
   parse_title:
     handler: handler.parse_title
-
+    environment:
+      bucket_name: 'html-response-text'
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
