Store title as a record in DynamoDB

--- a/service/serverless.yml
+++ b/service/serverless.yml
@@ -59,6 +59,7 @@ functions:
     handler: handler.parse_title
     environment:
       bucket_name: 'html-response-text'
+      table_name: 'html-response-title'
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
