Provide permissions for s3 and dynamodb via yml config

--- a/service/serverless.yml
+++ b/service/serverless.yml
@@ -28,6 +28,18 @@ provider:
       Action:
         lambda:InvokeFunction
       Resource: "*"
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.table_name}"
+    - Effect: Allow
+      Action:
+        - s3:*
+      Resource: "arn:aws:s3:::${self:provider.environment.bucket_name}/*"
 
 # you can overwrite defaults here
 #  stage: dev
